CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/sfrosit_t_indiv_ddtn_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_ddtn_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_ddtn_hist</externalName>
    <label>Child Support Deduction History</label>
    <pluralLabel>Child Support Deduction History</pluralLabel>
</CustomObject>