CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/amt_ddtn_total__c.field-meta.xml
<CustomField>
    <fullName>amt_ddtn_total__c</fullName>
    <description>amt_ddtn_total</description>
    <externalDeveloperName>amt_ddtn_total</externalDeveloperName>
    <label>Amount Paid</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>