CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/cde_freq_paid__c.field-meta.xml
<CustomField>
    <fullName>cde_freq_paid__c</fullName>
    <description>cde_freq_paid</description>
    <externalDeveloperName>cde_freq_paid</externalDeveloperName>
    <label>How often is the amount paid?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>