CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/cde_source_vrfyd_docket__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd_docket__c</fullName>
    <description>cde_source_vrfyd_docket</description>
    <externalDeveloperName>cde_source_vrfyd_docket</externalDeveloperName>
    <label>Docket How Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>