CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/cde_source_vrfyd_dtdn__c.field-meta.xml
<CustomField>
    <fullName>cde_source_vrfyd_dtdn__c</fullName>
    <description>cde_source_vrfyd_dtdn</description>
    <externalDeveloperName>cde_source_vrfyd_dtdn</externalDeveloperName>
    <label>Deduction How Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>