CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/cde_type_ddtn__c.field-meta.xml
<CustomField>
    <fullName>cde_type_ddtn__c</fullName>
    <description>cde_type_ddtn</description>
    <externalDeveloperName>cde_type_ddtn</externalDeveloperName>
    <label>Deduction Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>