CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/dte_end_effv__c.field-meta.xml
<CustomField>
    <fullName>dte_end_effv__c</fullName>
    <description>dte_end_effv</description>
    <externalDeveloperName>dte_end_effv</externalDeveloperName>
    <label>Effetive End Date</label>
    <type>Date</type>
</CustomField>