CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/idn_ddtn_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_ddtn_indiv__c</fullName>
    <description>idn_ddtn_indiv</description>
    <externalDeveloperName>idn_ddtn_indiv</externalDeveloperName>
    <label>Deduction ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_DDTN__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_DDTN__c</referenceTo>
    <relationshipLabel>Child Support Deduction Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_ddtn_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>