CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/idn_ddtn_indiv_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_ddtn_indiv_hist__c</fullName>
    <description>idn_ddtn_indiv_hist</description>
    <externalDeveloperName>idn_ddtn_indiv_hist</externalDeveloperName>
    <label>Deduction ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>