CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/idn_user_change_last__c.field-meta.xml
<CustomField>
    <fullName>idn_user_change_last__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>idn_user_change_last</description>
    <externalDeveloperName>idn_user_change_last</externalDeveloperName>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>sfrosit_t_indiv_ddtn_hist</relationshipName>
    <type>Lookup</type>
</CustomField>