CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/nam_payee__c.field-meta.xml
<CustomField>
    <fullName>nam_payee__c</fullName>
    <description>nam_payee</description>
    <externalDeveloperName>nam_payee</externalDeveloperName>
    <label>Payee Name</label>
    <length>71</length>
    <type>Text</type>
</CustomField>