CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/nam_rcvc__c.field-meta.xml
<CustomField>
    <fullName>nam_rcvc__c</fullName>
    <description>nam_rcvc</description>
    <externalDeveloperName>nam_rcvc</externalDeveloperName>
    <label>Receiver&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>