CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/nbr_docket__c.field-meta.xml
<CustomField>
    <fullName>nbr_docket__c</fullName>
    <description>nbr_docket</description>
    <externalDeveloperName>nbr_docket</externalDeveloperName>
    <label>Docket/Court Case #</label>
    <length>21</length>
    <type>Text</type>
</CustomField>