CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_ddtn_hist__x/fields/nbr_seq_ddtn_indiv__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_ddtn_indiv__c</fullName>
    <description>nbr_seq_ddtn_indiv</description>
    <externalDeveloperName>nbr_seq_ddtn_indiv</externalDeveloperName>
    <label>Individual Deduction Number Sequence</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>